--- a/Notación.ipynb
+++ b/Notación.ipynb
@@ -21,6 +21,8 @@
     "\n",
     "$\\sim$: distribuido como\n",
     "\n",
+    "$\\dot\\sim$: distribuido aproximadamente como\n",
+    "\n",
     "$\\forall x$: para todo los $x$ es cierto que...\n",
     "\n",
     "$A \\subseteq S$: $A$ es un subconjunto de $S$\n",
@@ -86,6 +88,13 @@
     "\n",
     "* Usamos letras romanas minúsculas en negrita para vectores ($\\mathbf{a}$) y letras romanas mayúsculas en negrita para matrices ($\\mathbf{A})$. Se asumen que los vectores son vectores columna, a menos que se indique lo contrario."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
