--- a/00_Python_y_EDA.ipynb
+++ b/00_Python_y_EDA.ipynb
@@ -1466,7 +1466,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Todavía faltan un par de detalles, pero los vamos a ver directamente en la función. Es común al aprender una lenguaje encontrarse con código que contiene elementos desconocidos o \"frases\" que no sabíamos que eran posibles o legales."
+    "Todavía faltan un par de detalles, pero los vamos a ver directamente en la función. Es común al aprender un lenguaje encontrarse con código que contiene elementos desconocidos o \"frases\" que no sabíamos que eran posibles o legales."
    ]
   },
   {
